fix alignment issues in list items, fix color and amount of error messages in form, minor css edits

--- a/src/css/form.css
+++ b/src/css/form.css
@@ -91,6 +91,10 @@
   display: none;
 }
 
+.form__validation-message {
+  color: var(--text-color-error);
+}
+
 .form__tools-container {
   display: flex;
 
