--- a/src/css/inventoryList.css
+++ b/src/css/inventoryList.css
@@ -1,5 +1,7 @@
 .inventory-list {
   width: 60%;
+  max-width: 700px;
+
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -10,38 +12,45 @@
 
 .list-item {
   width: 100%;
-  height: 225px;
+  min-width: 350px;
+  height: 300px;
   display: flex;
   background-color: var(--color-background-light);
-  gap: var(--spacing-small);
+  /* gap: var(--spacing-small); */
+  border-radius: var(--border-radius-medium);
 }
 
 .category-container {
   display: flex;
   flex-direction: column;
   height: 100%;
-  flex-basis: 20%;
+  flex-basis: 30%;
 }
 
 .category__icon-container {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-basis: 60%;
+  flex-basis: 55%;
   font-size: 64px;
+  border-bottom: 1px solid var(--color-background-medium);
 }
 
 .category__tools-container {
   display: flex;
-  flex-basis: 40%;
+  justify-content: center;
+  align-items: center;
+  flex-basis: 45%;
   gap: var(--spacing-small);
   padding: var(--spacing-small);
 }
 
 .category__tools-container button {
   width: 50%;
+  height: 75%;
   border: none;
   font-size: var(--font-size-large);
+  border-radius: var(--border-radius-medium);
 }
 .category__tools-container button:hover {
   box-shadow: var(--box-shadow-base);
@@ -51,15 +60,17 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  flex-basis: 80%;
+  flex-basis: 75%;
   justify-content: center;
 }
 
 .description-container {
   display: flex;
   flex-direction: column;
-  padding: var(--spacing-small);
-  padding-left: var(--spacing-medium);
+  justify-content: center;
+  flex-basis: 55%;
+  /* padding: var(--spacing-small); */
+  padding: 0 var(--spacing-medium);
   gap: var(--spacing-small);
   border-bottom: 1px solid var(--color-background-medium);
   border-left: 1px solid var(--color-background-medium);
@@ -68,18 +79,48 @@
 .dosages-container {
   display: flex;
   flex-direction: column;
-  padding: var(--spacing-small);
-  padding-left: var(--spacing-medium);
+  justify-content: center;
+  flex-basis: 45%;
+  /* padding: var(--spacing-small); */
+  padding: 0 var(--spacing-medium);
   gap: var(--spacing-small);
   border-left: 1px solid var(--color-background-medium);
 }
 
 .list-iten__subcontainer {
   display: flex;
+  height: 24px;
   width: 100%;
-  gap: var(--spacing-small);
+  align-items: center;
+}
+
+.list-iten__subcontainer:hover {
+  background-color: var(--color-background-list);
 }
 
 .list-iten__subcontainer h3 {
   font-size: var(--font-size-base);
+  flex-grow: 1;
+}
+
+.list-iten__subcontainer--symptoms {
+  display: flex;
+  justify-content: space-between;
+}
+
+.list-iten__subcontainer--symptoms:hover {
+  background-color: var(--color-background-list);
+}
+
+.list-iten__subcontainer--symptoms h3 {
+  font-size: var(--font-size-base);
+  flex-grow: 1;
+}
+
+.symptoms--display-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0 var(--spacing-small);
+  justify-content: flex-end;
+  text-align: right;
 }
